--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <h1>Simple Pong Game</h1>
+  <div id="scoreboard">
+    <span class="player" id="player1-score">0</span>
+    <span>:</span>
+    <span class="player" id="player2-score">0</span>
+  </div>
   <canvas id="pongCanvas" width="800" height="500"></canvas>
   <script src="game.js"></script>
 </body>
